--- a/app/views/halo4/service_record/_overview.html.haml
+++ b/app/views/halo4/service_record/_overview.html.haml
@@ -1,8 +1,8 @@
 .well
   %h3 Overview:
   .row-fluid
-    .span4{:style => "background-repeat: no-repeat; background-position: 110px 20px; background-image: url('#{X343ApiController.asset_url_generator_basic(@service_record['EmblemImageUrl']['BaseUrl'], @service_record['EmblemImageUrl']['AssetUrl'], '100')}')"}
-      %img{:src => X343ApiController.GetPlayerModel(params[:gamertag], 'medium', 'fullbody')}/
+    .span4{:style => "background-repeat: no-repeat; background-position: 110px 20px; background-image: url('#{I343ApiH4.asset_url_generator_basic(@service_record['EmblemImageUrl']['BaseUrl'], @service_record['EmblemImageUrl']['AssetUrl'], '100')}')"}
+      %img{:src => I343ApiH4.get_player_model(params[:gamertag], 'medium', 'fullbody')}/
     .span8
       .row-fluid
         .span6
