--- a/app/views/halo4/unique_playlist_csr.html.haml
+++ b/app/views/halo4/unique_playlist_csr.html.haml
@@ -21,7 +21,7 @@
 
       .row{ :style => 'margin: 0;' }
         .span6
-          %img{ :src => X343ApiController.asset_url_generator_basic(@playlist_data['ImageUrl']['BaseUrl'], @playlist_data['ImageUrl']['AssetUrl'], 'large') }
+          %img{ :src => I343ApiH4.asset_url_generator_basic(@playlist_data['ImageUrl']['BaseUrl'], @playlist_data['ImageUrl']['AssetUrl'], 'large') }
 
         .span6
           %p
