--- a/app/views/halo4/playlists/_game_mode.html.haml
+++ b/app/views/halo4/playlists/_game_mode.html.haml
@@ -11,7 +11,7 @@
     - index += 1
     - playlist_id = rand(10000)
     .row.playlist-container
-      .span3.preview-icon{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(playlist['ImageUrl']['BaseUrl'], playlist['ImageUrl']['AssetUrl'], 'large')}')" }
+      .span3.preview-icon{ :style => "background-image: url('#{I343ApiH4.asset_url_generator_basic(playlist['ImageUrl']['BaseUrl'], playlist['ImageUrl']['AssetUrl'], 'large')}')" }
 
       .span7.playlist-meta
         %h3
@@ -60,7 +60,7 @@
 - if index == 0
   .playlist-category-container
     .row.playlist-container
-      .span3.preview-icon-none{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(mode['ImageUrl']['BaseUrl'], mode['ImageUrl']['AssetUrl'], 'large')}')" }
+      .span3.preview-icon-none{ :style => "background-image: url('#{I343ApiH4.asset_url_generator_basic(mode['ImageUrl']['BaseUrl'], mode['ImageUrl']['AssetUrl'], 'large')}')" }
 
       .span7.playlist-meta
         %h3
