--- a/app/views/halo4/service_record/recent_match/_spartan_ops.html.haml
+++ b/app/views/halo4/service_record/recent_match/_spartan_ops.html.haml
@@ -5,10 +5,10 @@
       DNF :(
     - else
       Victory!
-  .map-preview{:style => "background-image: url('#{X343ApiController.asset_url_generator_basic(chapter_info['ImageUrl']['BaseUrl'], chapter_info['ImageUrl']['AssetUrl'], 'medium')}')"}
+  .map-preview{:style => "background-image: url('#{I343ApiH4.asset_url_generator_basic(chapter_info['ImageUrl']['BaseUrl'], chapter_info['ImageUrl']['AssetUrl'], 'medium')}')"}
     .cover
       - if match['DifficultyImageUrl'] != nil
-        %img{:src => X343ApiController.asset_url_generator_basic(match['DifficultyImageUrl']['BaseUrl'], match['DifficultyImageUrl']['AssetUrl'], 'medium'), :style => "margin: 20px 0 0 10px"}/
+        %img{:src => I343ApiH4.asset_url_generator_basic(match['DifficultyImageUrl']['BaseUrl'], match['DifficultyImageUrl']['AssetUrl'], 'medium'), :style => "margin: 20px 0 0 10px"}/
   .quick-stats{:style => "height: 80px;"}
     %h2 Spartan Ops
     %span.basic
