--- a/app/views/halo4/specializations/_in_progress.html.haml
+++ b/app/views/halo4/specializations/_in_progress.html.haml
@@ -10,7 +10,7 @@
   %hr/
 
 - else
-  %div{ :style => "background-position: top right; background-repeat: no-repeat; background-image: url('#{X343ApiController.asset_url_generator_basic(in_progress['ImageUrl']['BaseUrl'], in_progress['ImageUrl']['AssetUrl'], 'large')}')" }
+  %div{ :style => "background-position: top right; background-repeat: no-repeat; background-image: url('#{I343ApiH4.asset_url_generator_basic(in_progress['ImageUrl']['BaseUrl'], in_progress['ImageUrl']['AssetUrl'], 'large')}')" }
     - # swag nigaa, we got dis
     - specialization_data = specialization_data_from_id(in_progress['Id'])
     %h3
