new way to load css, depending on the template

--- a/app/views/halo4/home/index.html.erb
+++ b/app/views/halo4/home/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :halo4, true %>
 <% content_for :title, 'Halo 4' %>	
 <% content_for :has_footer, true %>
+<% content_for :template, 'halo4_home' %>
 
 <div class="bs-header welcome-header" id="content">
 	<div class="container">
