--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,6 +1,7 @@
 <% content_for :home, true %>
 <% content_for :title, 'Welcome' %>	
 <% content_for :has_footer, true %>
+<% content_for :template, 'home' %>
 
 <div class="bs-header welcome-header" id="content">
 	<div class="container">
