--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 		<%= javascript_include_tag "bootstrap" %>
 		<%= javascript_include_tag "application" %>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 		<%= csrf_meta_tags %>
 	</head>
 	<body class="<%= yield(:template) if content_for? :template %>">
