--- a/app/assets/stylesheets/halo4/home.css.scss
+++ b/app/assets/stylesheets/halo4/home.css.scss
@@ -2,6 +2,11 @@ body.halo4 {
 	.halo4-header {
 		height: 300px;
 
+		@media (max-width: 767px) {
+			height: 350px;
+		}
+
+
 		.container {
 			height: 100%;
 
@@ -10,9 +15,6 @@ body.halo4 {
 					h1 > img {
 						margin-top: -45px;
 
-						@media (min-width: 768px) and (max-width: 991px) {
-							display: none !important;
-						}
 						@media (max-width: 767px) {
 							display: none !important;
 						}
@@ -29,6 +31,23 @@ body.halo4 {
 			}
 			.rank-flairs {
 				margin-top: 30px;
+
+				> .col-md-8 {
+					> img {
+						margin-bottom: 5px;
+						@media (max-width: 767px) {
+							margin: 15px auto 0px auto;
+						}
+					}
+
+					> .progress {
+						margin-bottom: 0;
+					}
+
+					> .xp {
+						font-size: 14px;
+					}
+				}
 			}
 
 			.spartan-image {
