--- a/app/views/halo4/partials/_header.html.erb
+++ b/app/views/halo4/partials/_header.html.erb
@@ -14,13 +14,19 @@
 
 		<div class="row rank-flairs">
 			<div class="col-md-8">
+				<img class="hidden-xs" src="https://assets.halowaypoint.com/games/h4/ranks/v1/medium/sr-045.png" />
 				<div class="progress progress-striped active">
 					<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-						<span class="progress-bar-indicator">45% complete</span>
+						<span class="progress-bar-indicator">25,872 xp</span>
 						<span class="sr-only">45% Complete</span>
 					</div>
 				</div>
-				<img src="https://assets.halowaypoint.com/games/h4/ranks/v1/medium/sr-045.png" />
+				<div class="xp">
+					<div class="left lower-bound">12,000 xp</div>
+					<div class="right upper-bound">56,000 xp</div>
+					<div class="clearfix"></div>
+				</div>
+				<img class="visible-xs" src="https://assets.halowaypoint.com/games/h4/ranks/v1/medium/sr-045.png" />
 			</div>
 		</div>
 		
