added sidebar partial to overview

--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -1,6 +1,16 @@
 <% content_for :halo4, true %>
 <% content_for :title, 'Halo 4 - iBotPeaches v5' %>	
 <% content_for :has_footer, true %>
+<% content_for :halo4_active, 'overview' %>
 <% content_for :template, 'halo4 halo4_service_record' %>
 
 <%= render partial: 'halo4/partials/header' %>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-3">
+			<%= render partial: 'halo4/partials/sidebar' %>
+		</div>
+
+	</div>
+</div>
