--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -12,5 +12,18 @@
 			<%= render partial: 'halo4/partials/sidebar' %>
 		</div>
 
+		<div class="col-md-9">
+			<div class="bs-branch-section">
+				<div class="page-header">
+					<h1>Overview</h1>
+				</div>
+			</div>
+
+			<div class="bs-branch-section">
+				<div class="page-header">
+					<h1>Game History</h1>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
