--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="bs-sidebar affix-top">
+<div class="bs-sidebar" data-spy="affix" data-offset-top="302">
 	<ul class="nav bs-sidenav">
 		<li class="active">
 			<%= link_to 'Branch', halo4_servicerecord_path(@gamertag) %>
