naming tweaks, make leaf feel more 'built in'

--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -21,10 +21,10 @@
 			</ul>
 		</li>
 		<li class="active">
-			<%= link_to 'Leaf Integration', '#' %>
+			<%= link_to 'Leaf', '#' %>
 			<ul class="nav">
 				<li>
-					<a href="">View</a>
+					<a href="">Overview</a>
 				</li>
 				<li>
 					<a href="">Compare</a>
