--- a/app/views/halo4/partials/_header.html.erb
+++ b/app/views/halo4/partials/_header.html.erb
@@ -4,7 +4,7 @@
 		<div class="row name-flairs">
 			<div class="col-md-12">
 				<h1>
-					iBotPeaches
+					iBotPeaches v5
 					<img class="" src="https://assets.halowaypoint.com/games/h4/csr/v1/medium/23.png" />
 				</h1>
 				<h2>LEAF</h2>
