--- a/app/assets/stylesheets/halo4/service_record.css.scss
+++ b/app/assets/stylesheets/halo4/service_record.css.scss
@@ -122,19 +122,19 @@ body.halo4_service_record {
 
 						.windicator {
 							position: absolute;
-							bottom: -30px;
-							right: 0;
+							right: 25px;
+							bottom: -10px;
 
-							opacity: 0.2;
-							font-size: 40px;
+							opacity: 0.3;	
+							font-size: 60px;
 							font-weight: 900;
 							text-transform: uppercase;
 
-							@media (max-width: 767px) {
+							@media (min-width: 1200px) {
 								opacity: 0.3;	
-								right: 25px;
-								bottom: -10px;
-								font-size: 60px;
+								font-size: 40px;
+								bottom: -5px;
+								font-weight: 900;
 							}
 						}
 					}
